# notek

./: Cargo.toml  Dockerfile  README.md  client_tracking.md  protocol.md  simple_client.py
algos/: Cargo.toml  msgthingy.py
algos/src/: doc.rs  lib.rs  main.rs  msg.rs  pid.rs  pos.rs  session.rs  structure.rs  sync.rs
algos/src/martree/: core.rs  iterator.rs  mod.rs  node.rs
headless/: Cargo.toml  README.md  myers_diff.lua  notek.lua  random_editor.py
headless/src/: app.rs  editor_message.rs  local_doc.rs  main.rs  monitor.rs  oplog.rs  session.rs  state.rs  sync.rs
indextreemap_rust/src/: lib.rs
indextreemap_rust/src/methods/: insert.rs  iter.rs  remove.rs  replace.rs  search.rs  split.rs
indextreemap_rust/tests/: map_tests.rs
kotlingoot/: .gitignore  settings.gradle.kts
kotlingoot/app/: build.gradle.kts
kotlingoot/app/src/main/kotlin/org/example/: App.kt  Doc.kt  Msg.kt  Pid.kt  Pos.kt  Sync.kt
martree/: Cargo.toml
martree/src/: main.rs
notek/: .gitignore  settings.gradle.kts
notek.nvim/: README.md
notek.nvim/lua/notek/: config.lua  init.lua  protocol.lua  socket.lua
notek.nvim/plugin/: notek.lua
notek/app/: build.gradle.kts
notek/app/src/main/: AndroidManifest.xml
notek/app/src/main/res/values/: strings.xml  themes.xml
notek/gradle/: libs.versions.toml
notek/gradle/wrapper/: gradle-wrapper.properties
server/: Cargo.toml
server/src/: main-doc.rs  main.rs  older.rs  other.rs  serializer.rs  session.rs  state.rs  sync.rs
tui/: Cargo.toml
tui/src/: events.rs  main.rs  remote.rs
(+27 files in other folders)
