[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
algos = { path = "../algos" }
anyhow = "1.0.100"
bincode = { version = "1" }
byteorder = "1.5.0"
futures = "0.3.31"
rand = "0.9.2"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"
uuid = { version = "1", features = ["v4"] }
